--- a/heavycenter/src/main/res/layout/frag_mana_car_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_car_detail.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"/>
 
         <RelativeLayout
+            android:visibility="gone"
             android:id="@+id/ll_input"
             android:background="@color/white"
             android:gravity="center_vertical"
@@ -32,6 +33,7 @@
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
             android:id="@+id/item_carlicenseno"
             android:paddingRight="100dp"
+            style_common:txt_maxlenth="7"
             android:layout_centerVertical="true"
             android:layout_weight="1"
             style_common:txt_left = "车牌号"
@@ -157,6 +159,7 @@
             <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
                 style_common:inputType="3"
                 android:id="@+id/item_emptyweight"
+                style_common:txt_maxlenth="8"
                 style_common:txt_left = "车辆自重"
                 style_common:txt_mid = "请输入"
                 style_common:boo_edit = "true"
@@ -177,6 +180,7 @@
             android:layout_height="wrap_content">
             <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
                 style_common:inputType="3"
+                style_common:txt_maxlenth="8"
                 android:id="@+id/item_maxweight"
                 style_common:txt_left = "车辆载重"
                 style_common:txt_mid = "请输入"
@@ -197,6 +201,7 @@
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
             android:id="@+id/item_iccard"
+            style_common:txt_maxlenth="20"
             style_common:txt_left = "车辆IC卡号"
             style_common:txt_mid = "请输入"
             style_common:boo_edit = "true"
