--- a/heavycenter/src/main/res/layout/item_mana_car_my.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_my.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="item_mana_car_my"
-            type="com.siweisoft.heavycenter.data.netd.mana.car.list.CarsResBean.ResultsBean" />
+            type="com.siweisoft.heavycenter.data.netd.mana.car.list.CarsResBean.CarInfoRes" />
     </data>
     <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
