--- a/heavycenter/src/main/res/layout/frag_main_map.xml
+++ b/heavycenter/src/main/res/layout/frag_main_map.xml
@@ -18,6 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         <com.baidu.mapapi.map.MapView
+            android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
