--- a/heavycenter/src/main/res/layout/frag_main_weigts_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts_detail.xml
@@ -7,7 +7,20 @@
             name="frag_main_weigt"
             type="String" />
     </data>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/color_block_back"
+        >
 
+    <com.android.lib.view.title.TitleView
+        android:id="@+id/title"
+        style_common:iv_left ="@drawable/icon_hv_person"
+        style_common:iv_right ="@drawable/icon_hv_scan"
+        style_common:txt_mid ="地磅"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -119,7 +132,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <android.support.v7.widget.RecyclerView
+        <RelativeLayout
+            android:padding="2dp"
             android:layout_marginTop="-30dp"
             android:layout_below="@+id/ll_top"
             android:elevation="2dp"
@@ -128,6 +142,19 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+        </RelativeLayout>
     </RelativeLayout>
+    </LinearLayout>
 </layout>
