--- a/heavycenter/src/main/res/layout/frag_scan_info.xml
+++ b/heavycenter/src/main/res/layout/frag_scan_info.xml
@@ -68,8 +68,8 @@
                 android:layout_height="wrap_content" />
 
             <ImageView
+                android:id="@+id/iv_scan"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/icon_scan"
                 android:layout_width="180dp"
                 android:layout_height="180dp" />
 
@@ -77,7 +77,7 @@
                 android:textSize="14sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
-                android:text="扫一扫我的二维码，绑定单位"
+                android:text="扫一扫我的二维码"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
