--- a/heavycenter/src/main/res/layout/item_main_order_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_done.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="item_main_order_done"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
