--- a/heavycenter/src/main/res/layout/item_mana_store.xml
+++ b/heavycenter/src/main/res/layout/item_mana_store.xml
@@ -26,6 +26,7 @@
             android:weightSum="1"
             android:layout_height="match_parent"/>
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/rl_root"
             android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="80dp">
