--- a/heavycenter/src/main/res/layout/item_myce_head.xml
+++ b/heavycenter/src/main/res/layout/item_myce_head.xml
@@ -77,8 +77,9 @@
                                 android:layout_height="wrap_content" />
 
                             <ImageView
+                                android:layout_marginLeft="2dp"
                                 android:layout_marginRight="5dp"
-                                android:layout_marginBottom="3dp"
+                                android:layout_marginBottom="5dp"
                                 android:id="@+id/iv_nameedit"
                                 android:src="@drawable/icon_hv_myce_edit"
                                 android:layout_width="20dp"
