--- a/heavycenter/src/main/res/layout/frag_main_store_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
+<layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_main_store_detail"
@@ -22,7 +23,15 @@
             style_common:iv_right2 = "@drawable/icon_hv_panku"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            app:srlEnablePureScrollMode="true"
+            app:srlDragRate="0.2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -214,5 +223,8 @@
 
 
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
+    </LinearLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 </layout>
