--- a/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
+<layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_myce_unit_addr"
@@ -19,7 +20,16 @@
             style_common:txt_mid ="单位地址"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            app:srlEnablePureScrollMode="true"
+            app:srlDragRate="0.2"
+            android:id="@+id/refreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:orientation="horizontal"
             android:background="@color/white"
@@ -112,6 +122,7 @@
             android:id="@+id/recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
+    </LinearLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 </layout>
