--- a/heavycenter/src/main/res/layout/frag_main_msg.xml
+++ b/heavycenter/src/main/res/layout/frag_main_msg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
     xmlns:style_toptypeview="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools"
-    app:ignore="NamespaceTypo">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+  >
     <data>
         <variable
             name="frag_main_msg"
