--- a/heavycenter/src/main/res/layout/frag_myce_unit_nobind.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_nobind.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
+<layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_myce_unit_nobind"
@@ -18,7 +19,16 @@
             style_common:iv_left ="@drawable/icon_hv_person"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            app:srlEnablePureScrollMode="true"
+            app:srlDragRate="0.2"
+            android:id="@+id/refreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -71,5 +81,7 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 </layout>
