--- a/heavycenter/src/main/res/layout/item_myce_head.xml
+++ b/heavycenter/src/main/res/layout/item_myce_head.xml
@@ -61,7 +61,7 @@
                         <LinearLayout
                             android:layout_gravity="bottom"
                             android:layout_weight="1"
-                            android:gravity="bottom"
+                            android:gravity="top"
                             android:orientation="horizontal"
                             android:layout_width="wrap_content"
                             android:layout_height="0dp">
@@ -79,7 +79,7 @@
                             <ImageView
                                 android:layout_marginLeft="2dp"
                                 android:layout_marginRight="5dp"
-                                android:layout_marginBottom="5dp"
+                                android:layout_marginTop="5dp"
                                 android:id="@+id/iv_nameedit"
                                 android:src="@drawable/icon_hv_myce_edit"
                                 android:layout_width="20dp"
@@ -87,6 +87,8 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:visibility="visible"
+                            android:id="@+id/ll_role"
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="0dp">
