--- a/heavycenter/src/main/res/layout/frag_main_weigts.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts.xml
@@ -72,6 +72,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp">
                     <TextView
+                        android:id="@+id/tv_content"
                         android:layout_marginLeft="10dp"
                         android:textSize="14sp"
                         android:textColor="@color/color_grey_500"
@@ -129,6 +130,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="0dp">
                             <TextView
+                                android:id="@+id/tv_goodname"
                                 android:textColor="@color/black"
                                 android:textSize="22sp"
                                 android:text="2333"
@@ -136,6 +138,7 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
+                                android:id="@+id/tv_spes"
                                 android:layout_marginLeft="20dp"
                                 android:textColor="@color/black"
                                 android:textSize="22sp"
@@ -157,6 +160,7 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
+                                android:id="@+id/tv_shdw"
                                 android:layout_marginLeft="20dp"
                                 android:textColor="@color/black"
                                 android:textSize="14sp"
@@ -304,6 +308,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
+                        android:id="@+id/tv_save"
                         android:layout_centerInParent="true"
                         android:paddingLeft="70dp"
                         android:paddingRight="70dp"
