--- a/heavycenter/src/main/res/layout/item_main_weight_detail.xml
+++ b/heavycenter/src/main/res/layout/item_main_weight_detail.xml
@@ -11,7 +11,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:background="@color/white"
    >
 
@@ -20,7 +20,7 @@
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 <com.siweisoft.heavycenter.module.view.circle.CirCleView
     android:layout_marginTop="5dp"
     style_common:boo_one="true"
@@ -28,18 +28,18 @@
     android:layout_width="12dp"
     android:layout_height="12dp"/>
 
-<com.android.lib.view.line.view.VerticalDashView
+<!--<com.android.lib.view.line.view.VerticalDashView
     DashView:dashcolor="@color/color_hv_yelll"
     android:layout_marginTop="2dp"
     android:layout_width="1dp"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent" />-->
         </LinearLayout>
 
         <LinearLayout
             android:layout_marginLeft="15dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 <TextView
     android:text="10：15"
     android:textColor="@color/color_hv_yelll"
@@ -49,14 +49,8 @@
 
             <TextView
                 android:layout_marginTop="5dp"
-                android:text="fdfsfdsfsfdsfdsfdsfsfdsf"
+                android:text="@{item_main_weight_detail}"
                 android:textColor="@color/hv_color_text_title"
-                android:textSize="@dimen/hv_dimen_text_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:text="fewefewfewfewfewfw"
-                android:textColor="@color/color_grey_900"
                 android:textSize="@dimen/hv_dimen_text_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
