--- a/heavycenter/src/main/res/layout/item_myce_head.xml
+++ b/heavycenter/src/main/res/layout/item_myce_head.xml
@@ -17,102 +17,103 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
                 <com.android.lib.view.title.TitleView
-                    android:id="@+id/title"
-                    style_common:color_bg ="@color/transparent"
-                    style_common:iv_left ="@drawable/icon_hv_back"
-                    style_common:iv_right ="@drawable/icon_hv_myce_code"
-                    style_common:iv_right2 ="@color/transparent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                        android:id="@+id/title"
+                        style_common:color_bg="@color/transparent"
+                        style_common:iv_left="@drawable/icon_hv_back"
+                        style_common:iv_right="@drawable/icon_hv_myce_code"
+                        style_common:iv_right2="@color/transparent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-
-                    <RelativeLayout
-                        android:padding="10dp"
-                        android:layout_weight="0.8"
-                        android:layout_width="0dp"
+                        android:layout_marginTop="-20dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
 
+                    <RelativeLayout
+                            android:padding="15dp"
+                            android:layout_weight="0.8"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent">
+
+
                         <de.hdodenhof.circleimageview.CircleImageView
-                            android:layout_centerInParent="true"
-                            android:id="@+id/iv_head"
-                            android:src="@drawable/icon_hv_myce_head"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                                android:layout_centerInParent="true"
+                                android:id="@+id/iv_head"
+                                android:src="@drawable/icon_hv_myce_head"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"/>
 
                     </RelativeLayout>
 
 
-
                     <LinearLayout
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:layout_width="0dp"
-                        android:layout_height="100dp">
-                        <LinearLayout
-                            android:layout_gravity="bottom"
                             android:layout_weight="1"
-                            android:gravity="top"
-                            android:orientation="horizontal"
-                            android:layout_width="wrap_content"
-                            android:layout_height="0dp">
-                            <TextView
+                            android:orientation="vertical"
+                            android:layout_width="0dp"
+                            android:layout_height="100dp">
+                        <LinearLayout
+                                android:layout_gravity="bottom"
                                 android:layout_weight="1"
-                                android:ellipsize="marquee"
-                                android:singleLine="true"
-                                android:id="@+id/tv_name"
-                                android:text="18721654587"
-                                android:textSize="23sp"
-                                android:textColor="@color/white"
+                                android:gravity="top"
+                                android:orientation="horizontal"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
+                                android:layout_height="0dp">
+                            <TextView
+                                    android:layout_weight="1"
+                                    android:ellipsize="marquee"
+                                    android:singleLine="true"
+                                    android:id="@+id/tv_name"
+                                    android:text="18721654587"
+                                    android:textSize="23sp"
+                                    android:textColor="@color/white"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
 
                             <ImageView
-                                android:layout_marginLeft="2dp"
-                                android:layout_marginRight="5dp"
-                                android:layout_marginTop="5dp"
-                                android:id="@+id/iv_nameedit"
-                                android:src="@drawable/icon_hv_myce_edit"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp" />
+                                    android:layout_marginLeft="2dp"
+                                    android:layout_marginRight="5dp"
+                                    android:layout_marginTop="5dp"
+                                    android:id="@+id/iv_nameedit"
+                                    android:src="@drawable/icon_hv_myce_edit"
+                                    android:layout_width="20dp"
+                                    android:layout_height="20dp"/>
                         </LinearLayout>
 
                         <LinearLayout
-                            android:visibility="visible"
-                            android:id="@+id/ll_role"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="0dp">
-                        <TextView
-                            android:singleLine="true"
-                            android:id="@+id/tv_role"
-                            android:text="管理员"
-                            android:textSize="14sp"
-                            android:textColor="@color/white"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                                android:visibility="visible"
+                                android:id="@+id/ll_role"
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp">
+                            <TextView
+                                    android:singleLine="true"
+                                    android:id="@+id/tv_role"
+                                    android:text="管理员"
+                                    android:textSize="14sp"
+                                    android:textColor="@color/white"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
                         </LinearLayout>
                         <LinearLayout
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="0dp">
-                        <TextView
-                            android:singleLine="true"
-                            android:id="@+id/tv_phone"
-                            android:text="18741414141"
-                            android:textSize="18sp"
-                            android:textColor="@color/white"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp">
+                            <TextView
+                                    android:singleLine="true"
+                                    android:id="@+id/tv_phone"
+                                    android:text="18741414141"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/white"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
