--- a/lib/src/main/res/layout/dialog_center.xml
+++ b/lib/src/main/res/layout/dialog_center.xml
@@ -12,7 +12,14 @@
         android:id="@+id/dialog_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#e0000000"
         android:orientation="vertical">
+
+        <RelativeLayout
+                android:layout_centerInParent="true"
+                android:id="@+id/rl_center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+        </RelativeLayout>
     </RelativeLayout>
 </layout>
